Corrected to work on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,7 +66,7 @@ button {
 }
 
 	@media screen and (max-width: 768px) {
-		.navbar-collapse {
+  		.navbar-collapse {
 			background-color: #FFFFFF;
 			border-bottom-color: #f5f5f5;
 			border-bottom-width: 2px;
@@ -76,6 +76,28 @@ button {
 		.navbar-brand {
 			font-size: 32px !important;
 			padding-left: 12px;
+		}
+	}
+
+	@media screen and (max-width: 450px) { /*bootstrap smartphone breakpoint*/
+		.navbar-brand {
+			font-size: 18px !important;
+			padding-left: 12px;
+		}
+
+		button {
+			width: 30px !important;
+			height: 30px !important;
+		}
+
+		.navbar-toggle {
+		    margin-top: 22px !important;
+		    margin-right: 20px !important;
+		}
+
+		.glyphicon-th-list {
+			font-size: 20px;
+			margin-bottom: 57px;
 		}
 	}
 
@@ -94,6 +116,13 @@ button {
 	text-align: center;
 	font-size: 12px;
 }
+
+	@media screen and (max-width: 450px) { /*bootstrap smartphone breakpoint*/
+		.footer {
+			font-size: 8px;
+			;
+		}
+	}
 
 /* ------------ LANDING PAGE (CIRCLES) ------------ */
 
@@ -151,18 +180,20 @@ h2 {
 
 .horizontal-line {
 	width: 100%;
-	height: 20px;
+	height: 0px;
+	outline-style: solid;
+	outline-width: 10px;
 
 	position: absolute;
 	top: 50%;
 	left: 0;
 	z-index: 0;
+	padding: 1px !important;
 
-	background-color: #C865FF;
+	outline-color: #C865FF;
 	opacity: 0.5;
 	filter: alpha(opacity=50); /*For IE8 and earlier*/
 }
-
 
 	@media screen and (max-width: 1200px) { /*bootstrap sm breakpoint*/
 		.circle {
@@ -190,9 +221,30 @@ h2 {
 		}
 
 		.horizontal-line {
+			padding: 1px !important;
 			height: 100%;
-			width: 20px;
-			left: 48.35%;
+			width: 0px;
+			left: 50% !important;
+			top: 0;
+		}
+	}
+
+	@media screen and (max-width: 450px) { /*bootstrap smartphone breakpoint*/
+		.circle {
+			width: 280px;
+			height: 280px;
+		}
+
+		.circle:hover {
+			width: 300px;
+			height: 300px;
+			margin: -10px;
+		}
+
+		.horizontal-line {
+			height: 100%;
+			width: 0px;
+			left: 50% !important;
 			top: 0;
 		}
 	}
@@ -245,6 +297,7 @@ h3 {
 	font-size: 16px;
 	font-weight: bold;
 	margin: 0px !important;
+	padding: 0px !important;
 }
 
 .info-box {
@@ -307,6 +360,38 @@ a, a:link, a:hover, a:visited, a:active {
 p {
 	margin-top: 8px;
 }
+
+	@media screen and (max-width: 450px) { /*bootstrap smartphone breakpoint*/
+		.info-box {
+			height: 250px;
+		}
+
+		.info-image {
+			height: 248px;
+			width: 40%;
+		}
+
+		h3, h4 {
+			font-size: 90%;
+		}
+
+		p {
+			font-size: 80%;
+			margin-bottom: -10px;
+		}
+
+		h1 {
+			font-size: 90%;
+		}
+
+		.content-title {
+			height: 90%;
+		}
+
+		.blurb {
+			margin-top: 0;
+		}
+	}
 
 /* ------------ INFO PAGE ------------ */
 
